--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,6 @@ plugins {
 }
 
 group 'com.rundeck'
-version '1.0-SNAPSHOT'
-
 
 ext.rundeckPluginVersion = '1.2'
 ext.pluginClassNames=
@@ -19,7 +17,7 @@ sourceCompatibility = 1.8
 
 scmVersion {
     tag {
-        prefix = 'v'
+        prefix = ''
         versionSeparator = ''
         def origDeserialize=deserialize
         //apend .0 to satisfy semver if the tag version is only X.Y
