--- a/build.gradle
+++ b/build.gradle
@@ -51,8 +51,12 @@ dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.3.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'org.rundeck', name: 'rundeck-core', version: '2.10.0'
-    pluginLibs group: 'com.microsoft.azure', name: 'azure', version: '1.3.0'
-    pluginLibs group: 'com.microsoft.azure', name: 'azure-storage', version: '6.1.0'
+    pluginLibs (group: 'com.microsoft.azure', name: 'azure', version: '1.3.0'){
+        exclude group: "com.fasterxml.jackson.core"
+    }
+    pluginLibs (group: 'com.microsoft.azure', name: 'azure-storage', version: '6.1.0') {
+        exclude group: "com.fasterxml.jackson.core"
+    }
     pluginLibs group: 'commons-net', name: 'commons-net', version: '3.5'
     pluginLibs group: 'commons-io', name: 'commons-io', version: '2.5'
 
@@ -64,6 +68,12 @@ dependencies {
     testCompile "org.spockframework:spock-core:0.7-groovy-2.0"
     testCompile "cglib:cglib-nodep:2.2.2"
     testCompile 'org.objenesis:objenesis:1.4'
+
+    constraints {
+        pluginLibs("com.squareup.retrofit2:adapter-rxjava:2.6.1")  {
+            because "retrofit version by azure affected by CVE-2018-1000844"
+        }
+    }
 
 }
 
@@ -93,7 +103,3 @@ jar {
     dependsOn(copyToLib)
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '3.3'
-    distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-all.zip"
-}
