--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: build/libs/rundeck-azure-plugin-${{ steps.get_version.outputs.VERSION }}.jar
-          asset_name: rundeck-azure-plugin-${{ steps.get_version.outputs.VERSION }}.jar
+          asset_path: build/libs/azure-plugin-${{ steps.get_version.outputs.VERSION }}.jar
+          asset_name: azure-plugin-${{ steps.get_version.outputs.VERSION }}.jar
           asset_content_type: application/octet-stream
