--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ configurations {
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.3.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'org.rundeck', name: 'rundeck-core', version: '2.10.0'
+    compile group: 'org.rundeck', name: 'rundeck-core', version: '3.3.+'
     pluginLibs (group: 'com.microsoft.azure', name: 'azure', version: '1.3.0'){
         exclude group: "com.fasterxml.jackson.core"
     }
