--- a/build.gradle
+++ b/build.gradle
@@ -42,15 +42,15 @@ repositories {
 configurations {
     pluginLibs
 
-    compile {
+    implementation {
         extendsFrom pluginLibs
     }
 }
 
 dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.3.11'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'org.rundeck', name: 'rundeck-core', version: '3.3.+'
+    implementation 'org.codehaus.groovy:groovy-all:2.3.11'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    implementation group: 'org.rundeck', name: 'rundeck-core', version: '3.3.+'
     pluginLibs (group: 'com.microsoft.azure', name: 'azure', version: '1.3.0'){
         exclude group: "com.fasterxml.jackson.core"
     }
@@ -64,10 +64,10 @@ dependencies {
     pluginLibs group: 'com.microsoft.azure', name: 'azure-keyvault-core', version: '1.0.0'
 
 
-    testCompile "org.codehaus.groovy:groovy-all:2.3.7"
-    testCompile "org.spockframework:spock-core:0.7-groovy-2.0"
-    testCompile "cglib:cglib-nodep:2.2.2"
-    testCompile 'org.objenesis:objenesis:1.4'
+    testImplementation "org.codehaus.groovy:groovy-all:2.3.7"
+    testImplementation "org.spockframework:spock-core:0.7-groovy-2.0"
+    testImplementation "cglib:cglib-nodep:2.2.2"
+    testImplementation 'org.objenesis:objenesis:1.4'
 
     constraints {
         pluginLibs("com.squareup.retrofit2:adapter-rxjava:2.6.1")  {
