--- a/build.gradle
+++ b/build.gradle
@@ -45,16 +45,20 @@ dependencies {
     pluginLibs (group: 'com.microsoft.azure', name: 'azure', version: '1.41.4'){
         exclude group: "com.fasterxml.jackson.core"
         exclude group: "net.minidev", module: "json-smart"
+        exclude group: 'com.google.guava', module: 'guava'
     }
     pluginLibs (group: 'com.microsoft.azure', name: 'azure-storage', version: '8.6.6') {
         exclude group: "com.fasterxml.jackson.core"
         exclude group: "net.minidev", module: "json-smart"
+        exclude group: 'com.google.guava', module: 'guava'
     }
     pluginLibs group: 'commons-net', name: 'commons-net', version: '3.9.0'
     pluginLibs group: 'commons-io', name: 'commons-io', version: '2.12.0'
 
     // https://mvnrepository.com/artifact/com.microsoft.azure/azure-keyvault-core
-    pluginLibs group: 'com.microsoft.azure', name: 'azure-keyvault-core', version: '1.0.0'
+    pluginLibs (group: 'com.microsoft.azure', name: 'azure-keyvault-core', version: '1.0.0') {
+        exclude group: 'com.google.guava', module: 'guava'
+    }
 
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
     testImplementation "org.codehaus.groovy:groovy-all:3.0.9"
