--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,33 +2,34 @@ name: Java CI
 
 on: [push]
 
+permissions:
+  contents: read
+
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - name: Get Fetch Tags
         run: git -c protocol.version=2 fetch --tags --progress --no-recurse-submodules origin
         if: "!contains(github.ref, 'refs/tags')"
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
         with:
-          java-version: 1.8
+          java-version: '11'
+          distribution: 'zulu'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
         run: ./gradlew build
       - name: Get Release Version
         id: get_version
-        run: VERSION=$(./gradlew currentVersion -q -Prelease.quiet) && echo ::set-output name=VERSION::$VERSION
-      - name: Upload azure plugin jar
+        run: VERSION=$(./gradlew currentVersion -q -Prelease.quiet) && echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+      - name: Upload artifact jar
         uses: actions/upload-artifact@v4
         with:
-          # Artifact name
-          name: Grails-Plugin-${{ steps.get_version.outputs.VERSION }}
-          # Directory containing files to upload
-          path: build/libs/azure-plugin-${{ steps.get_version.outputs.VERSION }}.jar
+          name: Rundeck-Azure-Plugin-${{ steps.get_version.outputs.VERSION }}
+          path: build/libs/*-${{ steps.get_version.outputs.VERSION }}.jar
