--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,6 @@ repositories {
 }
 
 
-
 configurations {
     pluginLibs
 
@@ -49,6 +48,7 @@ configurations {
 
 dependencies {
     implementation libs.rundeckCore
+    implementation libs.groovyAll
 
     implementation libs.commonsIo
     pluginLibs libs.commonsNet
@@ -110,6 +110,20 @@ jar {
     dependsOn(copyToLib)
 }
 
+jar.dependsOn(copyToLib)
+
 test {
     useJUnitPlatform()
 }
+
+nexusPublishing {
+    packageGroup = 'org.rundeck.plugins'
+    repositories {
+        sonatype {
+            nexusUrl.set(uri("https://ossrh-staging-api.central.sonatype.com/service/local/"))
+            snapshotRepositoryUrl.set(uri("https://central.sonatype.com/repository/maven-snapshots/"))
+        }
+    }
+}
+
+apply from: "${rootDir}/gradle/publishing.gradle"
