--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ commonsNet = "3.11.1"
 okhttp = "4.12.0"
 retrofit = "2.9.0"
 nimbusJoseJwt = "9.37.3"
+jsonSmart = "2.5.0"
 junit = "4.13.2"
 spock = "2.0-groovy-3.0"
 cglib = "2.2.2"
@@ -32,6 +33,7 @@ commonsNet = { group = "commons-net", name = "commons-net", version.ref = "commo
 okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
 retrofitAdapterRxjava = { group = "com.squareup.retrofit2", name = "adapter-rxjava", version.ref = "retrofit" }
 nimbusJoseJwt = { group = "com.nimbusds", name = "nimbus-jose-jwt", version.ref = "nimbusJoseJwt" }
+jsonSmart = { group = "net.minidev", name = "json-smart", version.ref = "jsonSmart" }
 
 # Testing
 junit = { group = "junit", name = "junit", version.ref = "junit" }
