--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -2,7 +2,7 @@ name: Security Scan
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main, master, snyk-scan ]  # Added snyk-scan for testing
   pull_request:
     branches: [ main, master ]
   workflow_dispatch:
