--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -2,9 +2,9 @@ name: Security Scan
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main, master, snyk-scan ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ main, master, snyk-scan ]
   workflow_dispatch:
 
 jobs:
@@ -34,7 +34,6 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
           
       - name: Run Snyk monitor (main branch only)
-        if: github.ref == 'refs/heads/main'
         run: snyk monitor --detection-depth=10
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
