Proper logic this time for monitoring only on main

--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -45,7 +45,7 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
           
       - name: Run Snyk monitor (main branch only)
-        if: github.ref != 'refs/heads/main'
+        if: github.ref == 'refs/heads/main'
         run: snyk monitor --detection-depth=10
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
